added options in .prettierrc to comply with linter
