# public/openapi/write.yaml
@@ -47,134 +47,134 @@ tags:
     description: File upload routes
 paths:
   /ping:
-    $ref: "write/ping.yaml"
+    $ref: 'write/ping.yaml'
   /utilities/login:
-    $ref: "write/login.yaml"
+    $ref: 'write/login.yaml'
   /users/:
-    $ref: "write/users.yaml"
+    $ref: 'write/users.yaml'
   /users/{uid}:
-    $ref: "write/users/uid.yaml"
+    $ref: 'write/users/uid.yaml'
   /users/{uid}/picture:
-    $ref: "write/users/uid/picture.yaml"
+    $ref: 'write/users/uid/picture.yaml'
   /users/{uid}/content:
-    $ref: "write/users/uid/content.yaml"
+    $ref: 'write/users/uid/content.yaml'
   /users/{uid}/account:
-    $ref: "write/users/uid/account.yaml"
+    $ref: 'write/users/uid/account.yaml'
   /users/{uid}/settings:
-    $ref: "write/users/uid/settings.yaml"
+    $ref: 'write/users/uid/settings.yaml'
   /users/{uid}/password:
-    $ref: "write/users/uid/password.yaml"
+    $ref: 'write/users/uid/password.yaml'
   /users/{uid}/follow:
-    $ref: "write/users/uid/follow.yaml"
+    $ref: 'write/users/uid/follow.yaml'
   /users/{uid}/ban:
-    $ref: "write/users/uid/ban.yaml"
+    $ref: 'write/users/uid/ban.yaml'
   /users/{uid}/mute:
-    $ref: "write/users/uid/mute.yaml"
+    $ref: 'write/users/uid/mute.yaml'
   /users/{uid}/tokens:
-    $ref: "write/users/uid/tokens.yaml"
+    $ref: 'write/users/uid/tokens.yaml'
   /users/{uid}/tokens/{token}:
-    $ref: "write/users/uid/tokens/token.yaml"
+    $ref: 'write/users/uid/tokens/token.yaml'
   /users/{uid}/sessions/{uuid}:
-    $ref: "write/users/uid/sessions/uuid.yaml"
+    $ref: 'write/users/uid/sessions/uuid.yaml'
   /users/{uid}/invites:
-    $ref: "write/users/uid/invites.yaml"
+    $ref: 'write/users/uid/invites.yaml'
   /users/{uid}/invites/groups:
-    $ref: "write/users/uid/invites/groups.yaml"
+    $ref: 'write/users/uid/invites/groups.yaml'
   /users/{uid}/emails:
-    $ref: "write/users/uid/emails.yaml"
+    $ref: 'write/users/uid/emails.yaml'
   /users/{uid}/emails/{email}:
-    $ref: "write/users/uid/emails/email.yaml"
+    $ref: 'write/users/uid/emails/email.yaml'
   /users/{uid}/emails/{email}/confirm:
-    $ref: "write/users/uid/emails/email/confirm.yaml"
+    $ref: 'write/users/uid/emails/email/confirm.yaml'
   /users/{uid}/exports/{type}:
-    $ref: "write/users/uid/exports/type.yaml"
+    $ref: 'write/users/uid/exports/type.yaml'
   /groups/:
-    $ref: "write/groups.yaml"
+    $ref: 'write/groups.yaml'
   /groups/{slug}:
-    $ref: "write/groups/slug.yaml"
+    $ref: 'write/groups/slug.yaml'
   /groups/{slug}/membership/{uid}:
-    $ref: "write/groups/slug/membership/uid.yaml"
+    $ref: 'write/groups/slug/membership/uid.yaml'
   /groups/{slug}/ownership/{uid}:
-    $ref: "write/groups/slug/ownership/uid.yaml"
+    $ref: 'write/groups/slug/ownership/uid.yaml'
   /categories/:
-    $ref: "write/categories.yaml"
+    $ref: 'write/categories.yaml'
   /categories/{cid}:
-    $ref: "write/categories/cid.yaml"
+    $ref: 'write/categories/cid.yaml'
   /categories/{cid}/privileges:
-    $ref: "write/categories/cid/privileges.yaml"
+    $ref: 'write/categories/cid/privileges.yaml'
   /categories/{cid}/privileges/{privilege}:
-    $ref: "write/categories/cid/privileges/privilege.yaml"
+    $ref: 'write/categories/cid/privileges/privilege.yaml'
   /categories/{cid}/moderator/{uid}:
-    $ref: "write/categories/cid/moderator/uid.yaml"
+    $ref: 'write/categories/cid/moderator/uid.yaml'
   /topics/:
-    $ref: "write/topics.yaml"
+    $ref: 'write/topics.yaml'
   /topics/{tid}:
-    $ref: "write/topics/tid.yaml"
+    $ref: 'write/topics/tid.yaml'
   /topics/{tid}/state:
-    $ref: "write/topics/tid/state.yaml"
+    $ref: 'write/topics/tid/state.yaml'
   /topics/{tid}/lock:
-    $ref: "write/topics/tid/lock.yaml"
+    $ref: 'write/topics/tid/lock.yaml'
   /topics/{tid}/pin:
-    $ref: "write/topics/tid/pin.yaml"
+    $ref: 'write/topics/tid/pin.yaml'
   /topics/{tid}/follow:
-    $ref: "write/topics/tid/follow.yaml"
+    $ref: 'write/topics/tid/follow.yaml'
   /topics/{tid}/ignore:
-    $ref: "write/topics/tid/ignore.yaml"
+    $ref: 'write/topics/tid/ignore.yaml'
   /topics/{tid}/tags:
-    $ref: "write/topics/tid/tags.yaml"
+    $ref: 'write/topics/tid/tags.yaml'
   /topics/{tid}/thumbs:
-    $ref: "write/topics/tid/thumbs.yaml"
+    $ref: 'write/topics/tid/thumbs.yaml'
   /topics/{tid}/thumbs/order:
-    $ref: "write/topics/tid/thumbs/order.yaml"
+    $ref: 'write/topics/tid/thumbs/order.yaml'
   /topics/{tid}/events:
-    $ref: "write/topics/tid/events.yaml"
+    $ref: 'write/topics/tid/events.yaml'
   /topics/{tid}/events/{eventId}:
-    $ref: "write/topics/tid/events/eventId.yaml"
+    $ref: 'write/topics/tid/events/eventId.yaml'
   /posts/{pid}:
-    $ref: "write/posts/pid.yaml"
+    $ref: 'write/posts/pid.yaml'
   /posts/{pid}/state:
-    $ref: "write/posts/pid/state.yaml"
+    $ref: 'write/posts/pid/state.yaml'
   /posts/{pid}/move:
-    $ref: "write/posts/pid/move.yaml"
+    $ref: 'write/posts/pid/move.yaml'
   /posts/{pid}/vote:
-    $ref: "write/posts/pid/vote.yaml"
+    $ref: 'write/posts/pid/vote.yaml'
   /posts/{pid}/react:
-    $ref: "write/posts/pid/react.yaml"
+    $ref: 'write/posts/pid/react.yaml'
   /posts/{pid}/bookmark:
-    $ref: "write/posts/pid/bookmark.yaml"
+    $ref: 'write/posts/pid/bookmark.yaml'
   /posts/{pid}/diffs:
-    $ref: "write/posts/pid/diffs.yaml"
+    $ref: 'write/posts/pid/diffs.yaml'
   /posts/{pid}/diffs/{since}:
-    $ref: "write/posts/pid/diffs/since.yaml"
+    $ref: 'write/posts/pid/diffs/since.yaml'
   /posts/{pid}/diffs/{timestamp}:
-    $ref: "write/posts/pid/diffs/timestamp.yaml"
+    $ref: 'write/posts/pid/diffs/timestamp.yaml'
   /chats/:
-    $ref: "write/chats.yaml"
+    $ref: 'write/chats.yaml'
   /chats/{roomId}:
-    $ref: "write/chats/roomId.yaml"
+    $ref: 'write/chats/roomId.yaml'
   /chats/{roomId}/users:
-    $ref: "write/chats/roomId/users.yaml"
+    $ref: 'write/chats/roomId/users.yaml'
   /chats/{roomId}/users/{uid}:
-    $ref: "write/chats/roomId/users/uid.yaml"
+    $ref: 'write/chats/roomId/users/uid.yaml'
   /chats/{roomId}/messages:
-    $ref: "write/chats/roomId/messages.yaml"
+    $ref: 'write/chats/roomId/messages.yaml'
   /chats/{roomId}/messages/{mid}:
-    $ref: "write/chats/roomId/messages/mid.yaml"
+    $ref: 'write/chats/roomId/messages/mid.yaml'
   /flags/:
-    $ref: "write/flags.yaml"
+    $ref: 'write/flags.yaml'
   /flags/{flagId}:
-    $ref: "write/flags/flagId.yaml"
+    $ref: 'write/flags/flagId.yaml'
   /flags/{flagId}/notes:
-    $ref: "write/flags/flagId/notes.yaml"
+    $ref: 'write/flags/flagId/notes.yaml'
   /flags/{flagId}/notes/{datetime}:
-    $ref: "write/flags/flagId/notes/datetime.yaml"
+    $ref: 'write/flags/flagId/notes/datetime.yaml'
   /admin/settings/{setting}:
-    $ref: "write/admin/settings/setting.yaml"
+    $ref: 'write/admin/settings/setting.yaml'
   /admin/analytics:
-    $ref: "write/admin/analytics.yaml"
+    $ref: 'write/admin/analytics.yaml'
   /admin/analytics/{set}:
-    $ref: "write/admin/analytics/set.yaml"
+    $ref: 'write/admin/analytics/set.yaml'
   /files/:
-    $ref: "write/files.yaml"
+    $ref: 'write/files.yaml'
   /files/folder:
-    $ref: "write/files/folder.yaml"
+    $ref: 'write/files/folder.yaml'
