# src/controllers/admin/uploads.js
@@ -1,40 +1,40 @@
-"use strict";
+'use strict';
 
-const path = require("path");
-const nconf = require("nconf");
-const fs = require("fs");
+const path = require('path');
+const nconf = require('nconf');
+const fs = require('fs');
 
-const meta = require("../../meta");
-const posts = require("../../posts");
-const file = require("../../file");
-const image = require("../../image");
-const plugins = require("../../plugins");
-const pagination = require("../../pagination");
+const meta = require('../../meta');
+const posts = require('../../posts');
+const file = require('../../file');
+const image = require('../../image');
+const plugins = require('../../plugins');
+const pagination = require('../../pagination');
 
 const allowedImageTypes = [
-    "image/png",
-    "image/jpeg",
-    "image/pjpeg",
-    "image/jpg",
-    "image/gif",
-    "image/svg+xml",
+    'image/png',
+    'image/jpeg',
+    'image/pjpeg',
+    'image/jpg',
+    'image/gif',
+    'image/svg+xml',
 ];
 
 const uploadsController = module.exports;
 
 uploadsController.get = async function (req, res, next) {
     const currentFolder = path.join(
-        nconf.get("upload_path"),
-        req.query.dir || "",
+        nconf.get('upload_path'),
+        req.query.dir || '',
     );
-    if (!currentFolder.startsWith(nconf.get("upload_path"))) {
-        return next(new Error("[[error:invalid-path]]"));
+    if (!currentFolder.startsWith(nconf.get('upload_path'))) {
+        return next(new Error('[[error:invalid-path]]'));
     }
     const itemsPerPage = 20;
     const page = parseInt(req.query.page, 10) || 1;
     try {
         let files = await fs.promises.readdir(currentFolder);
-        files = files.filter((filename) => filename !== ".gitignore");
+        files = files.filter(filename => filename !== '.gitignore');
         const itemCount = files.length;
         const start = Math.max(0, (page - 1) * itemsPerPage);
         const stop = start + itemsPerPage;
@@ -56,15 +56,15 @@ uploadsController.get = async function (req, res, next) {
         });
 
         // Add post usage info if in /files
-        if (["files", "/files", "/files/"].includes(req.query.dir)) {
+        if (['files', '/files', '/files/'].includes(req.query.dir)) {
             const usage = await posts.uploads.getUsage(files);
             files.forEach((file, idx) => {
-                file.inPids = usage[idx].map((pid) => parseInt(pid, 10));
+                file.inPids = usage[idx].map(pid => parseInt(pid, 10));
             });
         }
-        res.render("admin/manage/uploads", {
-            currentFolder: currentFolder.replace(nconf.get("upload_path"), ""),
-            showPids: files.length && files[0].hasOwnProperty("inPids"),
+        res.render('admin/manage/uploads', {
+            currentFolder: currentFolder.replace(nconf.get('upload_path'), ''),
+            showPids: files.length && files[0].hasOwnProperty('inPids'),
             files: files,
             breadcrumbs: buildBreadcrumbs(currentFolder),
             pagination: pagination.create(
@@ -81,16 +81,16 @@ uploadsController.get = async function (req, res, next) {
 function buildBreadcrumbs(currentFolder) {
     const crumbs = [];
     const parts = currentFolder
-        .replace(nconf.get("upload_path"), "")
+        .replace(nconf.get('upload_path'), '')
         .split(path.sep);
-    let currentPath = "";
-    parts.forEach((part) => {
+    let currentPath = '';
+    parts.forEach(part => {
         const dir = path.join(currentPath, part);
         crumbs.push({
-            text: part || "Uploads",
+            text: part || 'Uploads',
             url: part
-                ? `${nconf.get("relative_path")}/admin/manage/uploads?dir=${dir}`
-                : `${nconf.get("relative_path")}/admin/manage/uploads`,
+                ? `${nconf.get('relative_path')}/admin/manage/uploads?dir=${dir}`
+                : `${nconf.get('relative_path')}/admin/manage/uploads`,
         });
         currentPath = dir;
     });
@@ -99,9 +99,7 @@ function buildBreadcrumbs(currentFolder) {
 }
 
 async function filesToData(currentDir, files) {
-    return await Promise.all(
-        files.map((file) => getFileData(currentDir, file)),
-    );
+    return await Promise.all(files.map(file => getFileData(currentDir, file)));
 }
 
 async function getFileData(currentDir, file) {
@@ -111,10 +109,10 @@ async function getFileData(currentDir, file) {
     if (stat.isDirectory()) {
         filesInDir = await fs.promises.readdir(pathToFile);
     }
-    const url = `${nconf.get("upload_url") + currentDir.replace(nconf.get("upload_path"), "")}/${file}`;
+    const url = `${nconf.get('upload_url') + currentDir.replace(nconf.get('upload_path'), '')}/${file}`;
     return {
         name: file,
-        path: pathToFile.replace(path.join(nconf.get("upload_path"), "/"), ""),
+        path: pathToFile.replace(path.join(nconf.get('upload_path'), '/'), ''),
         url: url,
         fileCount: Math.max(0, filesInDir.length - 1), // ignore .gitignore
         size: stat.size,
@@ -133,24 +131,24 @@ uploadsController.uploadCategoryPicture = async function (req, res, next) {
         params = JSON.parse(req.body.params);
     } catch (e) {
         file.delete(uploadedFile.path);
-        return next(new Error("[[error:invalid-json]]"));
+        return next(new Error('[[error:invalid-json]]'));
     }
 
     if (validateUpload(res, uploadedFile, allowedImageTypes)) {
         const filename = `category-${params.cid}${path.extname(uploadedFile.name)}`;
-        await uploadImage(filename, "category", uploadedFile, req, res, next);
+        await uploadImage(filename, 'category', uploadedFile, req, res, next);
     }
 };
 
 uploadsController.uploadFavicon = async function (req, res, next) {
     const uploadedFile = req.files.files[0];
-    const allowedTypes = ["image/x-icon", "image/vnd.microsoft.icon"];
+    const allowedTypes = ['image/x-icon', 'image/vnd.microsoft.icon'];
 
     if (validateUpload(res, uploadedFile, allowedTypes)) {
         try {
             const imageObj = await file.saveFileToLocal(
-                "favicon.ico",
-                "system",
+                'favicon.ico',
+                'system',
                 uploadedFile.path,
             );
             res.json([{ name: uploadedFile.name, url: imageObj.url }]);
@@ -164,14 +162,14 @@ uploadsController.uploadFavicon = async function (req, res, next) {
 
 uploadsController.uploadTouchIcon = async function (req, res, next) {
     const uploadedFile = req.files.files[0];
-    const allowedTypes = ["image/png"];
+    const allowedTypes = ['image/png'];
     const sizes = [36, 48, 72, 96, 144, 192, 512];
 
     if (validateUpload(res, uploadedFile, allowedTypes)) {
         try {
             const imageObj = await file.saveFileToLocal(
-                "touchicon-orig.png",
-                "system",
+                'touchicon-orig.png',
+                'system',
                 uploadedFile.path,
             );
             // Resize the image into squares for use as touch icons at various DPIs
@@ -180,8 +178,8 @@ uploadsController.uploadTouchIcon = async function (req, res, next) {
                 await image.resizeImage({
                     path: uploadedFile.path,
                     target: path.join(
-                        nconf.get("upload_path"),
-                        "system",
+                        nconf.get('upload_path'),
+                        'system',
                         `touchicon-${size}.png`,
                     ),
                     width: size,
@@ -199,13 +197,13 @@ uploadsController.uploadTouchIcon = async function (req, res, next) {
 
 uploadsController.uploadMaskableIcon = async function (req, res, next) {
     const uploadedFile = req.files.files[0];
-    const allowedTypes = ["image/png"];
+    const allowedTypes = ['image/png'];
 
     if (validateUpload(res, uploadedFile, allowedTypes)) {
         try {
             const imageObj = await file.saveFileToLocal(
-                "maskableicon-orig.png",
-                "system",
+                'maskableicon-orig.png',
+                'system',
                 uploadedFile.path,
             );
             res.json([{ name: uploadedFile.name, url: imageObj.url }]);
@@ -218,7 +216,7 @@ uploadsController.uploadMaskableIcon = async function (req, res, next) {
 };
 
 uploadsController.uploadLogo = async function (req, res, next) {
-    await upload("site-logo", req, res, next);
+    await upload('site-logo', req, res, next);
 };
 
 uploadsController.uploadFile = async function (req, res, next) {
@@ -228,7 +226,7 @@ uploadsController.uploadFile = async function (req, res, next) {
         params = JSON.parse(req.body.params);
     } catch (e) {
         file.delete(uploadedFile.path);
-        return next(new Error("[[error:invalid-json]]"));
+        return next(new Error('[[error:invalid-json]]'));
     }
 
     try {
@@ -246,11 +244,11 @@ uploadsController.uploadFile = async function (req, res, next) {
 };
 
 uploadsController.uploadDefaultAvatar = async function (req, res, next) {
-    await upload("avatar-default", req, res, next);
+    await upload('avatar-default', req, res, next);
 };
 
 uploadsController.uploadOgImage = async function (req, res, next) {
-    await upload("og:image", req, res, next);
+    await upload('og:image', req, res, next);
 };
 
 async function upload(name, req, res, next) {
@@ -258,7 +256,7 @@ async function upload(name, req, res, next) {
 
     if (validateUpload(res, uploadedFile, allowedImageTypes)) {
         const filename = name + path.extname(uploadedFile.name);
-        await uploadImage(filename, "system", uploadedFile, req, res, next);
+        await uploadImage(filename, 'system', uploadedFile, req, res, next);
     }
 }
 
@@ -266,7 +264,7 @@ function validateUpload(res, uploadedFile, allowedTypes) {
     if (!allowedTypes.includes(uploadedFile.type)) {
         file.delete(uploadedFile.path);
         res.json({
-            error: `[[error:invalid-image-type, ${allowedTypes.join("&#44; ")}]]`,
+            error: `[[error:invalid-image-type, ${allowedTypes.join('&#44; ')}]]`,
         });
         return false;
     }
@@ -277,8 +275,8 @@ function validateUpload(res, uploadedFile, allowedTypes) {
 async function uploadImage(filename, folder, uploadedFile, req, res, next) {
     let imageData;
     try {
-        if (plugins.hooks.hasListeners("filter:uploadImage")) {
-            imageData = await plugins.hooks.fire("filter:uploadImage", {
+        if (plugins.hooks.hasListeners('filter:uploadImage')) {
+            imageData = await plugins.hooks.fire('filter:uploadImage', {
                 image: uploadedFile,
                 uid: req.uid,
                 folder: folder,
@@ -292,13 +290,13 @@ async function uploadImage(filename, folder, uploadedFile, req, res, next) {
         }
 
         if (
-            path.basename(filename, path.extname(filename)) === "site-logo" &&
-            folder === "system"
+            path.basename(filename, path.extname(filename)) === 'site-logo' &&
+            folder === 'system'
         ) {
             const uploadPath = path.join(
-                nconf.get("upload_path"),
+                nconf.get('upload_path'),
                 folder,
-                "site-logo-x50.png",
+                'site-logo-x50.png',
             );
             await image.resizeImage({
                 path: uploadedFile.path,
@@ -306,30 +304,30 @@ async function uploadImage(filename, folder, uploadedFile, req, res, next) {
                 height: 50,
             });
             await meta.configs.set(
-                "brand:emailLogo",
-                path.join(nconf.get("upload_url"), "system/site-logo-x50.png"),
+                'brand:emailLogo',
+                path.join(nconf.get('upload_url'), 'system/site-logo-x50.png'),
             );
             const size = await image.size(uploadedFile.path);
             await meta.configs.setMultiple({
-                "brand:logo:width": size.width,
-                "brand:logo:height": size.height,
+                'brand:logo:width': size.width,
+                'brand:logo:height': size.height,
             });
         } else if (
-            path.basename(filename, path.extname(filename)) === "og:image" &&
-            folder === "system"
+            path.basename(filename, path.extname(filename)) === 'og:image' &&
+            folder === 'system'
         ) {
             const size = await image.size(uploadedFile.path);
             await meta.configs.setMultiple({
-                "og:image:width": size.width,
-                "og:image:height": size.height,
+                'og:image:width': size.width,
+                'og:image:height': size.height,
             });
         }
         res.json([
             {
                 name: uploadedFile.name,
-                url: imageData.url.startsWith("http")
+                url: imageData.url.startsWith('http')
                     ? imageData.url
-                    : nconf.get("relative_path") + imageData.url,
+                    : nconf.get('relative_path') + imageData.url,
             },
         ]);
     } catch (err) {
