# src/routes/index.js
@@ -1,88 +1,88 @@
-"use strict";
+'use strict';
 
-const nconf = require("nconf");
-const winston = require("winston");
-const path = require("path");
-const express = require("express");
-const chalk = require("chalk");
+const nconf = require('nconf');
+const winston = require('winston');
+const path = require('path');
+const express = require('express');
+const chalk = require('chalk');
 
-const meta = require("../meta");
-const controllers = require("../controllers");
-const controllerHelpers = require("../controllers/helpers");
-const plugins = require("../plugins");
+const meta = require('../meta');
+const controllers = require('../controllers');
+const controllerHelpers = require('../controllers/helpers');
+const plugins = require('../plugins');
 
-const authRoutes = require("./authentication");
-const writeRoutes = require("./write");
-const helpers = require("./helpers");
+const authRoutes = require('./authentication');
+const writeRoutes = require('./write');
+const helpers = require('./helpers');
 
 const { setupPageRoute } = helpers;
 
 const _mounts = {
-    user: require("./user"),
-    meta: require("./meta"),
-    api: require("./api"),
-    admin: require("./admin"),
-    feed: require("./feeds"),
+    user: require('./user'),
+    meta: require('./meta'),
+    api: require('./api'),
+    admin: require('./admin'),
+    feed: require('./feeds'),
 };
 
 _mounts.main = (app, middleware, controllers) => {
     const loginRegisterMiddleware = [middleware.redirectToAccountIfLoggedIn];
 
-    setupPageRoute(app, "/login", loginRegisterMiddleware, controllers.login);
+    setupPageRoute(app, '/login', loginRegisterMiddleware, controllers.login);
     setupPageRoute(
         app,
-        "/register",
+        '/register',
         loginRegisterMiddleware,
         controllers.register,
     );
     setupPageRoute(
         app,
-        "/register/complete",
+        '/register/complete',
         [],
         controllers.registerInterstitial,
     );
-    setupPageRoute(app, "/compose", [], controllers.composer.get);
-    setupPageRoute(app, "/confirm/:code", [], controllers.confirmEmail);
-    setupPageRoute(app, "/outgoing", [], controllers.outgoing);
-    setupPageRoute(app, "/search", [], controllers.search.search);
+    setupPageRoute(app, '/compose', [], controllers.composer.get);
+    setupPageRoute(app, '/confirm/:code', [], controllers.confirmEmail);
+    setupPageRoute(app, '/outgoing', [], controllers.outgoing);
+    setupPageRoute(app, '/search', [], controllers.search.search);
     setupPageRoute(
         app,
-        "/reset/:code?",
+        '/reset/:code?',
         [middleware.delayLoading],
         controllers.reset,
     );
-    setupPageRoute(app, "/tos", [], controllers.termsOfUse);
+    setupPageRoute(app, '/tos', [], controllers.termsOfUse);
 
     setupPageRoute(
         app,
-        "/email/unsubscribe/:token",
+        '/email/unsubscribe/:token',
         [],
         controllers.accounts.settings.unsubscribe,
     );
     app.post(
-        "/email/unsubscribe/:token",
+        '/email/unsubscribe/:token',
         controllers.accounts.settings.unsubscribePost,
     );
 
-    app.post("/compose", middleware.applyCSRF, controllers.composer.post);
+    app.post('/compose', middleware.applyCSRF, controllers.composer.post);
 };
 
 _mounts.mod = (app, middleware, controllers) => {
-    setupPageRoute(app, "/flags", [], controllers.mods.flags.list);
-    setupPageRoute(app, "/flags/:flagId", [], controllers.mods.flags.detail);
-    setupPageRoute(app, "/post-queue/:id?", [], controllers.mods.postQueue);
+    setupPageRoute(app, '/flags', [], controllers.mods.flags.list);
+    setupPageRoute(app, '/flags/:flagId', [], controllers.mods.flags.detail);
+    setupPageRoute(app, '/post-queue/:id?', [], controllers.mods.postQueue);
 };
 
 _mounts.globalMod = (app, middleware, controllers) => {
     setupPageRoute(
         app,
-        "/ip-blacklist",
+        '/ip-blacklist',
         [],
         controllers.globalMods.ipBlacklist,
     );
     setupPageRoute(
         app,
-        "/registration-queue",
+        '/registration-queue',
         [],
         controllers.globalMods.registrationQueue,
     );
@@ -135,13 +135,13 @@ _mounts.tags = (app, name, middleware, controllers) => {
 };
 
 _mounts.category = (app, name, middleware, controllers) => {
-    setupPageRoute(app, "/categories", [], controllers.categories.list);
-    setupPageRoute(app, "/popular", [], controllers.popular.get);
-    setupPageRoute(app, "/recent", [], controllers.recent.get);
-    setupPageRoute(app, "/top", [], controllers.top.get);
+    setupPageRoute(app, '/categories', [], controllers.categories.list);
+    setupPageRoute(app, '/popular', [], controllers.popular.get);
+    setupPageRoute(app, '/recent', [], controllers.recent.get);
+    setupPageRoute(app, '/top', [], controllers.top.get);
     setupPageRoute(
         app,
-        "/unread",
+        '/unread',
         [middleware.ensureLoggedIn],
         controllers.unread.get,
     );
@@ -198,45 +198,45 @@ module.exports = async function (app, middleware) {
 
     // Allow plugins/themes to mount some routes elsewhere
     const remountable = [
-        "admin",
-        "category",
-        "topic",
-        "post",
-        "users",
-        "user",
-        "groups",
-        "tags",
-        "career",
+        'admin',
+        'category',
+        'topic',
+        'post',
+        'users',
+        'user',
+        'groups',
+        'tags',
+        'career',
     ];
-    const { mounts } = await plugins.hooks.fire("filter:router.add", {
+    const { mounts } = await plugins.hooks.fire('filter:router.add', {
         mounts: remountable.reduce((memo, mount) => {
             memo[mount] = mount;
             return memo;
         }, {}),
     });
     // Guard against plugins sending back missing/extra mounts
-    Object.keys(mounts).forEach((mount) => {
+    Object.keys(mounts).forEach(mount => {
         if (!remountable.includes(mount)) {
             delete mounts[mount];
-        } else if (typeof mount !== "string") {
+        } else if (typeof mount !== 'string') {
             mounts[mount] = mount;
         }
     });
-    remountable.forEach((mount) => {
+    remountable.forEach(mount => {
         if (!mounts.hasOwnProperty(mount)) {
             mounts[mount] = mount;
         }
     });
 
-    router.all("(/+api|/+api/*?)", middleware.prepareAPI);
+    router.all('(/+api|/+api/*?)', middleware.prepareAPI);
     router.all(
-        `(/+api/admin|/+api/admin/*?${mounts.admin !== "admin" ? `|/+api/${mounts.admin}|/+api/${mounts.admin}/*?` : ""})`,
+        `(/+api/admin|/+api/admin/*?${mounts.admin !== 'admin' ? `|/+api/${mounts.admin}|/+api/${mounts.admin}/*?` : ''})`,
         middleware.authenticateRequest,
         middleware.ensureLoggedIn,
         middleware.admin.checkPrivileges,
     );
     router.all(
-        `(/+admin|/+admin/*?${mounts.admin !== "admin" ? `|/+${mounts.admin}|/+${mounts.admin}/*?` : ""})`,
+        `(/+admin|/+admin/*?${mounts.admin !== 'admin' ? `|/+${mounts.admin}|/+${mounts.admin}/*?` : ''})`,
         middleware.ensureLoggedIn,
         middleware.applyCSRF,
         middleware.admin.checkPrivileges,
@@ -245,17 +245,17 @@ module.exports = async function (app, middleware) {
     app.use(middleware.stripLeadingSlashes);
 
     // handle custom homepage routes
-    router.use("/", controllers.home.rewrite);
+    router.use('/', controllers.home.rewrite);
 
     // homepage handled by `action:homepage.get:[route]`
-    setupPageRoute(router, "/", [], controllers.home.pluginHook);
+    setupPageRoute(router, '/', [], controllers.home.pluginHook);
 
     await plugins.reloadRoutes({ router: router });
     await authRoutes.reloadRoutes({ router: router });
     await writeRoutes.reload({ router: router });
     addCoreRoutes(app, router, middleware, mounts);
 
-    winston.info("[router] Routes added");
+    winston.info('[router] Routes added');
 };
 
 function addCoreRoutes(app, router, middleware, mounts) {
@@ -269,34 +269,34 @@ function addCoreRoutes(app, router, middleware, mounts) {
 
     addRemountableRoutes(app, router, middleware, mounts);
 
-    const relativePath = nconf.get("relative_path");
-    app.use(relativePath || "/", router);
+    const relativePath = nconf.get('relative_path');
+    app.use(relativePath || '/', router);
 
-    if (process.env.NODE_ENV === "development") {
-        require("./debug")(app, middleware, controllers);
+    if (process.env.NODE_ENV === 'development') {
+        require('./debug')(app, middleware, controllers);
     }
 
     app.use(middleware.privateUploads);
 
     const statics = [
-        { route: "/assets", path: path.join(__dirname, "../../build/public") },
-        { route: "/assets", path: path.join(__dirname, "../../public") },
+        { route: '/assets', path: path.join(__dirname, '../../build/public') },
+        { route: '/assets', path: path.join(__dirname, '../../public') },
     ];
     const staticOptions = {
-        maxAge: app.enabled("cache") ? 5184000000 : 0,
+        maxAge: app.enabled('cache') ? 5184000000 : 0,
     };
 
     if (
-        path.resolve(__dirname, "../../public/uploads") !==
-        nconf.get("upload_path")
+        path.resolve(__dirname, '../../public/uploads') !==
+        nconf.get('upload_path')
     ) {
         statics.unshift({
-            route: "/assets/uploads",
-            path: nconf.get("upload_path"),
+            route: '/assets/uploads',
+            path: nconf.get('upload_path'),
         });
     }
 
-    statics.forEach((obj) => {
+    statics.forEach(obj => {
         app.use(
             relativePath + obj.route,
             middleware.addUploadHeaders,
@@ -305,33 +305,33 @@ function addCoreRoutes(app, router, middleware, mounts) {
     });
     app.use(`${relativePath}/uploads`, (req, res) => {
         res.redirect(
-            `${relativePath}/assets/uploads${req.path}?${meta.config["cache-buster"]}`,
+            `${relativePath}/assets/uploads${req.path}?${meta.config['cache-buster']}`,
         );
     });
     app.use(`${relativePath}/plugins`, (req, res) => {
         winston.warn(
-            `${chalk.bold.red("[deprecation]")} The \`/plugins\` shorthand prefix is deprecated, prefix with \`/assets/plugins\` instead (path: ${req.path})`,
+            `${chalk.bold.red('[deprecation]')} The \`/plugins\` shorthand prefix is deprecated, prefix with \`/assets/plugins\` instead (path: ${req.path})`,
         );
         res.redirect(
-            `${relativePath}/assets/plugins${req.path}${req._parsedUrl.search || ""}`,
+            `${relativePath}/assets/plugins${req.path}${req._parsedUrl.search || ''}`,
         );
     });
 
     // Skins
-    meta.css.supportedSkins.forEach((skin) => {
+    meta.css.supportedSkins.forEach(skin => {
         app.use(
             `${relativePath}/assets/client-${skin}.css`,
             middleware.buildSkinAsset,
         );
     });
 
-    app.use(controllers["404"].handle404);
+    app.use(controllers['404'].handle404);
     app.use(controllers.errors.handleURIErrors);
     app.use(controllers.errors.handleErrors);
 }
 
 function addRemountableRoutes(app, router, middleware, mounts) {
-    Object.keys(mounts).map(async (mount) => {
+    Object.keys(mounts).map(async mount => {
         const original = mount;
         mount = mounts[original];
 
@@ -349,7 +349,7 @@ function addRemountableRoutes(app, router, middleware, mounts) {
             router.use(new RegExp(`/(api/)?${original}`), (req, res) => {
                 controllerHelpers.redirect(
                     res,
-                    `${nconf.get("relative_path")}/${mount}${req.path}`,
+                    `${nconf.get('relative_path')}/${mount}${req.path}`,
                 );
             });
         }
